# mrt-ws

./: .gitignore  README.md
arm/: arm_commands.py  blublub.py
arm/log/: latest_list
arm_workspace/arm/: arm_commands.py
arm_workspace/install/: local_setup.sh  setup.bash  setup.sh
arm_workspace/log/: latest_build  latest_list
arm_workspace/src/arm_pos_control/: package.xml  setup.py
arm_workspace/src/msg_interfaces/: CMakeLists.txt  package.xml
arm_workspace/src/pos_control_interfaces/: CMakeLists.txt  package.xml
arm_workspace_old/log/: latest_build
arm_workspace_old/src/arm_pos_control/: package.xml  setup.cfg  setup.py
arm_workspace_old/src/arm_pos_interfaces/: CMakeLists.txt  package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build  latest_list
src/all_interfaces/: CMakeLists.txt  package.xml
src/all_interfaces/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
src/all_interfaces/log/: latest_build
src/arm_pos_control/: package.xml  setup.py
src/arm_pos_control/arm_pos_control/: angle_generator.py
src/aruco_detection/: setup.py
src/aruco_detection_interfaces/: CMakeLists.txt  package.xml
src/assgn/: setup.cfg  setup.py
src/mrs_hudson/: package.xml  setup.cfg  setup.py
src/odom_tf_publisher/: package.xml  setup.cfg  setup.py
src/py_srvcli/: package.xml  setup.py
src/sauron/: package.xml  setup.py
src/tutorial_interfaces/: CMakeLists.txt  package.xml
src/week0_tutorials/: package.xml  setup.py
src/week1_tutorials/: package.xml  setup.cfg  setup.py
(+549 files in other folders)
